--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -83,9 +83,18 @@
                 android:id="@+id/statusText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
-                android:visibility="gone"/>
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/usePhoneInsteadText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
+                android:onClick="@{viewmodel::onUsingPhoneToReset}"
+                android:text="@string/use_phone_to_reset_password"
+                android:textAlignment="center"
+                android:textColor="@color/redirect_color" />
         </LinearLayout>
     </RelativeLayout>
 
