--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -54,58 +54,15 @@
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_registration_graph"
-            app:destination="@id/registration_graph" />
-        <action
-            android:id="@+id/action_loginFragment_to_forgot_password_graph"
-            app:destination="@id/forgot_password_graph" />
-        <action
             android:id="@+id/actionMain"
             app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_phoneAuthFragment"
+            app:destination="@id/phoneAuthFragment" />
     </fragment>
-    <navigation
-        android:id="@+id/registration_graph"
-        app:startDestination="@id/phoneAuthFragment" >
-        <fragment
-            android:id="@+id/phoneAuthFragment"
-            android:name="upuphere.com.upuphere.ui.user.PhoneAuthFragment"
-            android:label="fragment_phone_auth"
-            tools:layout="@layout/fragment_phone_auth" >
-            <action
-                android:id="@+id/action_phoneAuthFragment_to_signUpFragment"
-                app:destination="@id/signUpFragment"
-                app:popUpTo="@id/signUpFragment"
-                app:popUpToInclusive="true"/>
-        </fragment>
-        <fragment
-            android:id="@+id/signUpFragment"
-            android:name="upuphere.com.upuphere.ui.user.SignUpFragment"
-            android:label="fragment_sign_up"
-            tools:layout="@layout/fragment_sign_up" >
-            <argument
-                android:name="phoneNumber"
-                app:argType="string"
-                app:nullable="true" />
-        </fragment>
-    </navigation>
-    <navigation
-        android:id="@+id/forgot_password_graph"
-        app:startDestination="@id/forgotPasswordFragment" >
-        <fragment
-            android:id="@+id/forgotPasswordFragment"
-            android:name="upuphere.com.upuphere.ui.user.ForgotPasswordFragment"
-            android:label="fragment_forgot_password"
-            tools:layout="@layout/fragment_forgot_password" >
-            <action
-                android:id="@+id/action_forgotPasswordFragment_to_resetPasswordFragment"
-                app:destination="@id/resetPasswordFragment" />
-        </fragment>
-        <fragment
-            android:id="@+id/resetPasswordFragment"
-            android:name="upuphere.com.upuphere.ui.user.ResetPasswordFragment"
-            android:label="fragment_reset_password"
-            tools:layout="@layout/fragment_reset_password" />
-    </navigation>
     <fragment
         android:id="@+id/profileFragment"
         android:name="upuphere.com.upuphere.ProfileFragment"
@@ -134,4 +91,38 @@
             android:name="originFragment"
             app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="upuphere.com.upuphere.ui.user.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up" />
+    <fragment
+        android:id="@+id/phoneAuthFragment"
+        android:name="upuphere.com.upuphere.ui.user.PhoneAuthFragment"
+        android:label="fragment_phone_auth"
+        tools:layout="@layout/fragment_phone_auth" >
+        <action
+            android:id="@+id/action_phoneAuthFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_phoneAuthFragment_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="upuphere.com.upuphere.ui.user.ForgotPasswordFragment"
+        android:label="fragment_forgot_password"
+        tools:layout="@layout/fragment_forgot_password" >
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment" />
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_phoneAuthFragment"
+            app:destination="@id/phoneAuthFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/resetPasswordFragment"
+        android:name="upuphere.com.upuphere.ui.user.ResetPasswordFragment"
+        android:label="fragment_reset_password"
+        tools:layout="@layout/fragment_reset_password" />
 </navigation>
