--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -62,6 +62,9 @@
         <action
             android:id="@+id/action_loginFragment_to_phoneAuthFragment"
             app:destination="@id/phoneAuthFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_phoneAuthFragment2"
+            app:destination="@id/phoneAuthFragment2" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -95,7 +98,12 @@
         android:id="@+id/signUpFragment"
         android:name="upuphere.com.upuphere.ui.user.SignUpFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" />
+        tools:layout="@layout/fragment_sign_up" >
+        <argument
+            android:name="phone_number"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
     <fragment
         android:id="@+id/phoneAuthFragment"
         android:name="upuphere.com.upuphere.ui.user.PhoneAuthFragment"
@@ -114,11 +122,11 @@
         android:label="fragment_forgot_password"
         tools:layout="@layout/fragment_forgot_password" >
         <action
-            android:id="@+id/action_forgotPasswordFragment_to_resetPasswordFragment"
-            app:destination="@id/resetPasswordFragment" />
-        <action
             android:id="@+id/action_forgotPasswordFragment_to_phoneAuthFragment"
             app:destination="@id/phoneAuthFragment" />
+        <action
+            android:id="@+id/action_forgotPasswordFragment_to_phoneAuthFragment2"
+            app:destination="@id/phoneAuthFragment2" />
     </fragment>
     <fragment
         android:id="@+id/resetPasswordFragment"
@@ -134,5 +142,20 @@
             app:destination="@id/loginFragment"
             app:popUpTo="@+id/loginFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/phoneAuthFragment2"
+        android:name="upuphere.com.upuphere.ui.user.PhoneAuthFragment2"
+        android:label="fragment_phone_auth_fragment2"
+        tools:layout="@layout/fragment_phone_auth_fragment2" >
+        <argument
+            android:name="previousFragmentCode"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_phoneAuthFragment2_to_resetPasswordFragment"
+            app:destination="@id/resetPasswordFragment" />
+        <action
+            android:id="@+id/action_phoneAuthFragment2_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
     </fragment>
 </navigation>
